welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var H = getMondeHauteur()
	var Tab = new Array[Colors](H)
	for (i<- 1 to H) {
		Tab(i) = getCouleurSol()
		avance()
	}
	
}
